deployments/simple-kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globeco-execution-service-kafka
  namespace: globeco
  labels:
    app: globeco-execution-service-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globeco-execution-service-kafka
  template:
    metadata:
      labels:
        app: globeco-execution-service-kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:latest
          ports:
            - containerPort: 9092
            - containerPort: 9091
            - containerPort: 9093
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: globeco-execution-service-kafka
  namespace: globeco
  labels:
    app: globeco-execution-service-kafka
spec:
  type: ClusterIP
  ports:
    - name: kafka-client
      port: 9092
      targetPort: 9092
    - name: kafka-inter-broker
      port: 9093
      targetPort: 9093
    - name: kafka-controller
      port: 9091
      targetPort: 9091
  selector:
    app: globeco-execution-service-kafka
