deployments/simple-portfolio-accounting-service-postgresql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: globeco-portfolio-accounting-service-postgresql-headless
  namespace: globeco
spec:
  clusterIP: None
  selector:
    app: globeco-portfolio-accounting-service-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: globeco-portfolio-accounting-service-postgresql
  namespace: globeco
spec:
  selector:
    app: globeco-portfolio-accounting-service-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: globeco-portfolio-accounting-service-postgresql
  namespace: globeco
spec:
  serviceName: globeco-portfolio-accounting-service-postgresql-headless
  replicas: 1
  selector:
    matchLabels:
      app: globeco-portfolio-accounting-service-postgresql
  template:
    metadata:
      labels:
        app: globeco-portfolio-accounting-service-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          args:
            - "-c"
            - "listen_addresses=0.0.0.0"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
        namespace: globeco
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-storage
        resources:
          requests:
            storage: 5Gi
